V-1.0.0 - Final Release